Added a travis build link

--- a/README
+++ b/README
@@ -1,2 +1,4 @@
 Fettle is a state machine framework for java.
 For more information please visit http://thehiflyer.github.com/Fettle/
+
+[![Build Status](https://travis-ci.org/thehiflyer/Fettle.svg?branch=master)](https://travis-ci.org/thehiflyer/Fettle)
